[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glider"
version = "0.1.0"
description = "Glider CLI"
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

[project.scripts]
glider = "glider.cli:configure"
